<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="125dp">


    <ImageView
        android:id="@+id/image_computer"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginTop="4dp"
        android:background="#8BC34A"
        android:src="@drawable/paper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/textVs"
        app:layout_constraintTop_toBottomOf="@+id/text_timestamp" />

    <ImageView
        android:id="@+id/image_you"
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="#8BC34A"
        android:src="@drawable/paper"
        app:layout_constraintBottom_toTopOf="@+id/textUser"
        app:layout_constraintEnd_toStartOf="@+id/textVs"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_timestamp"
        app:layout_constraintVertical_bias="0.437" />

    <TextView
        android:id="@+id/text_status"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_computer_wins"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/text_timestamp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textVs"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:padding="5dp"
        android:text="@string/game_vs"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toStartOf="@+id/image_computer"
        app:layout_constraintStart_toEndOf="@+id/image_you" />

    <TextView
        android:id="@+id/text_timestamp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="TimeStamp"
        android:textAlignment="center"
        android:textSize="10sp"
        app:layout_constraintBottom_toTopOf="@+id/textVs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_status" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_margin="5dp"
        android:background="#8BC34A"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <TextView
        android:id="@+id/textUser"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/you"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textVs"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_computer" />

    <TextView
        android:id="@+id/textComputer"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/computer"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toEndOf="@+id/textVs"
        app:layout_constraintTop_toBottomOf="@+id/image_computer" />
</androidx.constraintlayout.widget.ConstraintLayout>