<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.GameActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/welcome"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_instruction"
            android:textAlignment="center"
            android:textSize="10sp" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_weight="1"
            android:background="#8BC34A"
            android:backgroundTint="#8BC34A" />

        <TextView
            android:id="@+id/text_stats_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/game_stats_info"
            android:textAlignment="center"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textAlignment="center"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

        <ImageView
            android:id="@+id/image_computer"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#8BC34A"
            app:srcCompat="@drawable/paper" />

        <TextView
            android:id="@+id/text_vs"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="25dp"
            android:text="@string/game_vs"
            android:textAlignment="center"
            android:textSize="30sp" />

        <ImageView
            android:id="@+id/image_you"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:background="#8BC34A"
            app:srcCompat="@drawable/rock" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="-16dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_rock"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:backgroundTint="#4CAF50"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/rock" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_paper"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:backgroundTint="#4CAF50"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/paper" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/button_scissor"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:backgroundTint="#4CAF50"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/scissors" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>